--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -25,9 +25,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libglib2.0-0 libnss3 libgconf-2-4 libfontconfig1
-        CHROME_DRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
-        wget -N http://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip -P ~/
-        unzip ~/chromedriver_linux64.zip -d ~/
+        CHROME_DRIVER_VERSION="120.0.6099.109"
+        CHROME_DRIVER_URL="https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/${CHROME_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
+        wget -N $CHROME_DRIVER_URL -P ~/
+        unzip ~/chromedriver-linux64.zip -d ~/
         sudo mv -f ~/chromedriver /usr/local/share/
         sudo chmod +x /usr/local/share/chromedriver
         sudo ln -sf /usr/local/share/chromedriver /usr/local/bin/chromedriver
@@ -35,4 +36,3 @@ jobs:
 
     - name: Run Selenium Script
       run: python main.py  # Replace with the path to your script
-
