--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -29,10 +29,11 @@ jobs:
         CHROME_DRIVER_URL="https://edgedl.me.gvt1.com/edgedl/chrome/chrome-for-testing/${CHROME_DRIVER_VERSION}/linux64/chromedriver-linux64.zip"
         wget -N $CHROME_DRIVER_URL -P ~/
         unzip ~/chromedriver-linux64.zip -d ~/
-        sudo mv -f ~/chromedriver /usr/local/share/
+        sudo mv -f ~/chromedriver-linux64/chromedriver /usr/local/share/
         sudo chmod +x /usr/local/share/chromedriver
         sudo ln -sf /usr/local/share/chromedriver /usr/local/bin/chromedriver
         sudo ln -sf /usr/local/share/chromedriver /usr/bin/chromedriver
 
-    - name: Run Selenium Script
-      run: python main.py  # Replace with the path to your script
+
+        - name: Run Selenium Script
+        run: python main.py  # Replace with the path to your script
