--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -38,13 +38,14 @@ jobs:
         sudo ln -sf /usr/local/share/chromedriver /usr/bin/chromedriver
 
     - name: Commit and Push Output File
+      env:
+        ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       run: |
         git config --global user.name 'SoloSaudiDeveloper'
-        git config --global user.email 'SoloSaudiDeveloper@gmail.com'
+        git config --global user.email 'your-email@example.com'
         git add OutputResults.csv
         git commit -m "Update output CSV file" || echo "No changes to commit"
-        git push
-
+        git push https://SoloSaudiDeveloper:${ACCESS_TOKEN}@github.com/SoloSaudiDeveloper/shares.git main
 
     - name: Run Selenium Script
       run: python main.py
