--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -42,7 +42,7 @@ jobs:
         ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       run: |
         git config --global user.name 'SoloSaudiDeveloper'
-        git config --global user.email 'your-email@example.com'
+        git config --global user.email 'SoloSaudiDeveloper@gmail.com'
         git add OutputResults.csv
         git commit -m "Update output CSV file" || echo "No changes to commit"
         git push https://SoloSaudiDeveloper:${ACCESS_TOKEN}@github.com/SoloSaudiDeveloper/shares.git main
