--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -37,6 +37,9 @@ jobs:
         sudo ln -sf /usr/local/share/chromedriver /usr/local/bin/chromedriver
         sudo ln -sf /usr/local/share/chromedriver /usr/bin/chromedriver
 
+    - name: Run Selenium Script
+      run: python main.py  # Make sure this script updates OutputResults.csv
+
     - name: Commit and Push Output File
       env:
         ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
@@ -46,7 +49,3 @@ jobs:
         git add OutputResults.csv
         git commit -m "Update output CSV file" || echo "No changes to commit"
         git push https://SoloSaudiDeveloper:${ACCESS_TOKEN}@github.com/SoloSaudiDeveloper/shares.git main
-
-    - name: Run Selenium Script
-      run: python main.py
-      
