--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -48,4 +48,4 @@ jobs:
         git config --global user.email 'SoloSaudiDeveloper@gmail.com'
         git add OutputResults.csv
         git commit -m "Update output CSV file" || echo "No changes to commit"
-        git push https://SoloSaudiDeveloper:${ACCESS_TOKEN}@github.com/SoloSaudiDeveloper/shares.git main
+        git push https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/SoloSaudiDeveloper/shares.git main
