--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -55,5 +55,6 @@ jobs:
         git config --global user.name 'SoloSaudiDeveloper'
         git config --global user.email 'SoloSaudiDeveloper@gmail.com'
         git add OutputResults.csv
-        git commit -m "Update output CSV file" || echo "No changes to commit"
+        git add percentage.csv
+        git commit -m "Update output CSV file and percentage" || echo "No changes to commit"
         git push https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/SoloSaudiDeveloper/shares.git main
