--- a/.github/workflows/selenium_scrape.yml
+++ b/.github/workflows/selenium_scrape.yml
@@ -1,12 +1,12 @@
 name: Selenium Scraper
 
 on:
-  push: # Trigger on push, you can change this to a schedule
+  push:
   schedule:
-    - cron: '0 13 * * 0-4'  # Runs at 1 PM UTC, equivalent to 4 PM Riyadh time, from Sunday to Thursday
-  
+    - cron: '0 13 * * 0-4' # Runs at 1 PM UTC, equivalent to 4 PM Riyadh time, from Sunday to Thursday
+
 permissions:
-  contents: write  # Allows the workflow to write to the repository
+  contents: write
 
 jobs:
   scrape:
@@ -50,7 +50,7 @@ jobs:
         sudo ln -sf /usr/local/share/chromedriver /usr/bin/chromedriver
 
     - name: Run percentage Script
-      run: python percentage.py  # Make sure this script updates OutputResults.csv
+      run: python percentage.py
 
     - name: Commit and Push Output File
       env:
@@ -58,7 +58,6 @@ jobs:
       run: |
         git config --global user.name 'SoloSaudiDeveloper'
         git config --global user.email 'SoloSaudiDeveloper@gmail.com'
-        git add OutputResults.csv
-        git add percentage.csv
+        git add OutputResults.csv percentage.csv
         git commit -m "Update output CSV file and percentage" || echo "No changes to commit"
-        git push https://${{ secrets.PERSONAL
+        git push https://${{ env.ACCESS_TOKEN }}@github.com/SoloSaudiDeveloper/shares.git main
